--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.8.0",
     "prettier": "^2.8.1",
     "prettier-plugin-astro": "^0.7.2"
   }
